--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -21,16 +21,14 @@
     <filter-name>encodingFilter</filter-name>
     <url-pattern>/*</url-pattern>
   </filter-mapping>
-  
   <filter>
-  	<filter-name>loginFilter</filter-name>
-  	<filter-class>org.study.filter.LoginFilter</filter-class>
+    <filter-name>loginFilter</filter-name>
+    <filter-class>org.study.filter.LoginFilter</filter-class>
   </filter>
   <filter-mapping>
     <filter-name>loginFilter</filter-name>
     <url-pattern>/ProfileServlet</url-pattern>
   </filter-mapping>
-  
   <servlet>
     <description></description>
     <display-name>Profile</display-name>
@@ -50,5 +48,15 @@
   <servlet-mapping>
     <servlet-name>AdminServlet</servlet-name>
     <url-pattern>/AdminServlet</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <description></description>
+    <display-name>SaveServlet</display-name>
+    <servlet-name>SaveServlet</servlet-name>
+    <servlet-class>org.study.web.SaveServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>SaveServlet</servlet-name>
+    <url-pattern>/SaveServlet</url-pattern>
   </servlet-mapping>
 </web-app>
